aapi: PrintStream.print/println(Object) is @Independent (not @Independent(hc=true))
print(Object) and println(Object) convert the argument to a String and write
bytes; they do NOT retain the argument's hidden content, so the parameter is
fully @Independent. Previously the computed default was @Independent(hc=true),
whose summary 'x.§hc -> this.§hc' leaked a hidden-content link from any argument
into System.out (e.g. 'System.out.println(list)' linked list's elements to
System.out). Regenerated the analyzed-results archive accordingly.

Fixes the System.out over-link in TestList (typelink) "Show how §m is present
after an assignment".